FIND_PACKAGE(I23dSFM QUIET)
IF (I23DSFM_FOUND)
	INCLUDE_DIRECTORIES(${I23DSFM_INCLUDE_DIRS})
	add_definitions(-D_USE_I23DSFM)
	set(LIBS_DEPEND "MVS;${I23DSFM_LIBRARIES}")
ELSE()
	set(LIBS_DEPEND "MVS")
	MESSAGE("I23DSFM_NOT FOUND : I23dSFM importer with JSON support will not be build")
ENDIF()

if(MSVC)
	FILE(GLOB LIBRARY_FILES_C "*.cpp" "*.rc")
else()
	FILE(GLOB LIBRARY_FILES_C "*.cpp")
endif()
FILE(GLOB LIBRARY_FILES_H "*.h" "*.inl")

cxx_executable_with_flags_no_pch(InterfaceI23dSFM "Apps" "${cxx_default}" "${LIBS_DEPEND}" ${LIBRARY_FILES_C} ${LIBRARY_FILES_H})

if(I23D_USE_BREAKPAD AND BREAKPAD_FOUND)
	target_link_libraries(InterfaceI23dSFM ${BREAKPAD_LIBS})
endif()
#link_directories(/home/lyb/i23dMVS_build/lib)
target_link_libraries(InterfaceI23dSFM mvs_cuda)
